--- a/projects.html
+++ b/projects.html
@@ -228,10 +228,10 @@
         <!-- Warehouse Image 1 -->
         <div class="col-lg-4 col-md-6 portfolio-item">
           <div class="portfolio-content h-100">
-            <img src="assets/img/projects/remodeling-1.jpg" class="img-fluid" alt="">
+            <img src="assets/img/projects/remodeling-1.webp" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Warehouse Image 1</h4>
-              <a href="assets/img/projects/remodeling-1.jpg" title="Warehouse Image 1" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+              <a href="assets/img/projects/remodeling-1.webp" title="Warehouse Image 1" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
               <a href="#" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
             </div>
           </div>
@@ -240,10 +240,10 @@
         <!-- Warehouse Image 2 -->
         <div class="col-lg-4 col-md-6 portfolio-item">
           <div class="portfolio-content h-100">
-            <img src="assets/img/projects/construction-1.jpg" class="img-fluid" alt="">
+            <img src="assets/img/projects/construction-1.webp" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Warehouse Image 2</h4>
-              <a href="assets/img/projects/construction-1.jpg" title="Warehouse Image 2" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+              <a href="assets/img/projects/construction-1.webp" title="Warehouse Image 2" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
               <a href="#" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
             </div>
           </div>
@@ -252,10 +252,10 @@
         <!-- Warehouse Image 3 -->
         <div class="col-lg-4 col-md-6 portfolio-item">
           <div class="portfolio-content h-100">
-            <img src="assets/img/projects/repairs-1.jpg" class="img-fluid" alt="">
+            <img src="assets/img/projects/repairs-1.webp" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Warehouse Image 3</h4>
-              <a href="assets/img/projects/repairs-1.jpg" title="Warehouse Image 3" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+              <a href="assets/img/projects/repairs-1.webp" title="Warehouse Image 3" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
               <a href="#" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
             </div>
           </div>
@@ -264,10 +264,10 @@
         <!-- Warehouse Image 4 -->
         <div class="col-lg-4 col-md-6 portfolio-item">
           <div class="portfolio-content h-100">
-            <img src="assets/img/projects/design-1.jpg" class="img-fluid" alt="">
+            <img src="assets/img/projects/design-1.webp" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Warehouse Image 4</h4>
-              <a href="assets/img/projects/design-1.jpg" title="Warehouse Image 4" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+              <a href="assets/img/projects/design-1.webp" title="Warehouse Image 4" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
               <a href="#" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
             </div>
           </div>
@@ -276,10 +276,10 @@
         <!-- Warehouse Image 5 -->
         <div class="col-lg-4 col-md-6 portfolio-item">
           <div class="portfolio-content h-100">
-            <img src="assets/img/projects/remodeling-2.jpg" class="img-fluid" alt="">
+            <img src="assets/img/projects/remodeling-2.webp" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Warehouse Image 5</h4>
-              <a href="assets/img/projects/remodeling-2.jpg" title="Warehouse Image 5" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+              <a href="assets/img/projects/remodeling-2.webp" title="Warehouse Image 5" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
               <a href="#" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
             </div>
           </div>
@@ -288,10 +288,10 @@
         <!-- Warehouse Image 6 -->
         <div class="col-lg-4 col-md-6 portfolio-item">
           <div class="portfolio-content h-100">
-            <img src="assets/img/projects/construction-2.jpg" class="img-fluid" alt="">
+            <img src="assets/img/projects/construction-2.webp" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Warehouse Image 6</h4>
-              <a href="assets/img/projects/construction-2.jpg" title="Warehouse Image 6" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+              <a href="assets/img/projects/construction-2.webp" title="Warehouse Image 6" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
               <a href="#" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
             </div>
           </div>
@@ -300,10 +300,10 @@
         <!-- Warehouse Image 7 -->
         <div class="col-lg-4 col-md-6 portfolio-item">
           <div class="portfolio-content h-100">
-            <img src="assets/img/projects/repairs-2.jpg" class="img-fluid" alt="">
+            <img src="assets/img/projects/repairs-2.webp" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Warehouse Image 7</h4>
-              <a href="assets/img/projects/repairs-2.jpg" title="Warehouse Image 7" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+              <a href="assets/img/projects/repairs-2.webp" title="Warehouse Image 7" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
               <a href="#" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
             </div>
           </div>
@@ -312,10 +312,10 @@
         <!-- Warehouse Image 8 -->
         <div class="col-lg-4 col-md-6 portfolio-item">
           <div class="portfolio-content h-100">
-            <img src="assets/img/projects/design-2.jpg" class="img-fluid" alt="">
+            <img src="assets/img/projects/design-2.webp" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Warehouse Image 8</h4>
-              <a href="assets/img/projects/design-2.jpg" title="Warehouse Image 8" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+              <a href="assets/img/projects/design-2.webp" title="Warehouse Image 8" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
               <a href="#" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
             </div>
           </div>
@@ -324,10 +324,10 @@
         <!-- Warehouse Image 9 -->
         <div class="col-lg-4 col-md-6 portfolio-item">
           <div class="portfolio-content h-100">
-            <img src="assets/img/projects/remodeling-3.jpg" class="img-fluid" alt="">
+            <img src="assets/img/projects/remodeling-3.webp" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Warehouse Image 9</h4>
-              <a href="assets/img/projects/remodeling-3.jpg" title="Warehouse Image 9" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+              <a href="assets/img/projects/remodeling-3.webp" title="Warehouse Image 9" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
               <a href="#" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
             </div>
           </div>
@@ -336,10 +336,10 @@
         <!-- Warehouse Image 10 -->
         <div class="col-lg-4 col-md-6 portfolio-item">
           <div class="portfolio-content h-100">
-            <img src="assets/img/projects/construction-3.jpg" class="img-fluid" alt="">
+            <img src="assets/img/projects/construction-3.webp" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Warehouse Image 10</h4>
-              <a href="assets/img/projects/construction-3.jpg" title="Warehouse Image 10" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+              <a href="assets/img/projects/construction-3.webp" title="Warehouse Image 10" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
               <a href="#" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
             </div>
           </div>
@@ -348,10 +348,10 @@
         <!-- Warehouse Image 11 -->
         <div class="col-lg-4 col-md-6 portfolio-item">
           <div class="portfolio-content h-100">
-            <img src="assets/img/projects/repairs-3.jpg" class="img-fluid" alt="">
+            <img src="assets/img/projects/repairs-3.webp" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Warehouse Image 11</h4>
-              <a href="assets/img/projects/repairs-3.jpg" title="Warehouse Image 11" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+              <a href="assets/img/projects/repairs-3.webp" title="Warehouse Image 11" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
               <a href="#" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
             </div>
           </div>
@@ -360,10 +360,10 @@
         <!-- Warehouse Image 12 -->
         <div class="col-lg-4 col-md-6 portfolio-item">
           <div class="portfolio-content h-100">
-            <img src="assets/img/projects/design-3.jpg" class="img-fluid" alt="">
+            <img src="assets/img/projects/design-3.webp" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Warehouse Image 12</h4>
-              <a href="assets/img/projects/design-3.jpg" title="Warehouse Image 12" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+              <a href="assets/img/projects/design-3.webp" title="Warehouse Image 12" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
               <a href="#" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
             </div>
           </div>
