Client satisfied very last

--- a/project-details.html
+++ b/project-details.html
@@ -90,12 +90,13 @@
         <li class="dropdown">
           <a href="services.html"><span>Services</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
           <ul class="dropdown-menu">
-            <li><a href="supervision-works.html">Construction Supervision</a></li>
-            <li><a href="Project-management.html">Project Management</a></li>
-            <li><a href="Engsolutions-services.html">Engineering Solutions</a></li>
-            <li><a href="commercial-services.html">Commercial Development</a></li>
-            <li><a href="Warehouse-services.html">Warehouse Construction</a></li>
             <li><a href="Architectural-services.html">Architectural Modelling</a></li>
+            <li><a href="supervision-works.html">Construction Supervision</a></li>
+            <li><a href="commercial-services.html">Commercial Development</a></li>
+            <li><a href="Engsolutions-services.html">Engineering Solutions</a></li>
+            <li><a href="Project-management.html">Project Management</a></li>
+        
+            <li><a href="Warehouse-services.html">Warehouse Construction</a></li>
           </ul>
         </li>
         <li><a href="projects.html" class="active">Projects</a></li>
@@ -312,7 +313,7 @@
               <strong>Phone No 1:</strong> <a href="tel:+91 9789099139">9789099139</a><br>
               <strong>Phone No 2:</strong> <a href="tel:+91 9489929139">9489929139</a><br>
               <strong>Telphone No 1:</strong> <a href="tel:0462-2577643">0462-2577643</a><br>
-              <strong>Email:</strong> <a href="mailto:selwinmajestic369@gmail.com">selwinmajestic369@gmail.com</a><br>
+              <strong>Email:</strong> <a href="mailto:smenggconsultancy369@gmail.com">smenggconsultancy369@gmail.com</a><br>
           </p>
           
             <div class="social-links d-flex mt-3">
