--- a/Business-special.html
+++ b/Business-special.html
@@ -200,6 +200,20 @@
       <div class="container position-relative d-flex flex-column align-items-center" data-aos="fade">
 
         <h2>Business complex development</h2>
+        <style>
+        @media (max-width: 768px) {
+          .breadcrumbs h2 {
+              font-size: 20px;
+              font-weight: 500;
+              color: #fff;
+              font-family: var(--font-secondary);
+          }
+      }
+        </style>
+          /* Apply text alignment for mobile view */
+
+
+        </style>
         <ol>
           <li><a href="services.html">Services</a></li>
           <li>Business complex development</li>
