--- a/Project-special.html
+++ b/Project-special.html
@@ -215,6 +215,15 @@
 
       <div class="col-lg-4">
         <h4>Project Management Specialization</h4>
+      <style>
+        @media (max-width: 768px) {
+          .breadcrumbs h2 {
+              font-size: 20px;
+              font-weight: 500;
+              color: #fff;
+              font-family: var(--font-secondary);
+          }
+      }</style>
         <p style="  text-align: justify;">
           At Selwin Majestic Engineering Consultancy, project management is a key area of specialization. Our dedicated team leverages extensive experience and expertise to guide projects from conception through to successful completion, ensuring that all objectives are met efficiently and effectively.
         </p>
